# coding_challange

./: .gitignore  README.md  pyproject.toml
docs/: conf.py
src/: main.py
src/configurations/: main.yaml  model_load.yaml
src/data/: make_dataset.py  make_dataset_test.py
src/modelling/: train_model.py  train_model_test.py
