[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Marlon Schumacher <m.c.schumacher@live.de>"]

[tool.poetry.dependencies]
python = "^3.9.1"
numpy = "^1.22.2"
hydra-core = "^1.1.1"
omegaconf = "^2.1.1"
sklearn = "^0.0"
pandas = "^1.4.1"
pytest = "^7.0.1"
hypothesis = "^6.36.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipeline = "src.main:run_pipeline"
load_model = "src.main:load_model"